# Tarea-2-Arboles-AVL-vs-Splay-Trees

./: CMakeLists.txt  README.md
src/: experiments.c  experiments.h  main.c
src/avl_tree/: avl.c  avl.h
src/splay_tree/: splay.c  splay.h
